--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@ I'm passionate about technology and it excites me to work around computers, codi
                     <li>
                       <img src="assets\images\team\m4new3.jpg" alt="">
                       <p>We can't help everyone ... But everyone can help someone.</p>
-                      <div class="testimonials-author"> Anshika Agraawal -Graphic designer  </div>
+                      <div class="testimonials-author"> Anshika Agrawal -Graphic designer  </div>
                     </li>
 
                     <!-- Testimonial -->
