--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                 <h2>Donation Diary</h2>
                 <hr>
                 <p>The below are the details of the best NGOs of India which are verified by our team one by one. We believe that the donated money should always be used for the good cause and we promise you that all your money , whatever you donate will always be used to help the poor and needy ones. Our belief is that the all the donated money should directly be given to the right people , that's why instead of making a donation , we taked a further initiave to provide the details of best NGOS across the country. We will keep updating the data every month , but still if you have face any issue or face any quiries regarding this initiave , feel free to contact us at
-                  hopeforachnage@gmail.com
-                  <br><a href="mailto:hopeforachnage@gmail.com?subject=feedback">Email Us</a></br>
+                  hopeforachangefoundation@gmail.com
+                  <br><a href="mailto:hopeforachangefoundation@gmail.com?subject=feedback">Email Us</a></br>
                 "Charity is an investment which gives smile to someone in return."
                 </p>
               </div> <!-- edn col-sm-8 -->
@@ -768,7 +768,7 @@ I'm passionate about technology and it excites me to work around computers, codi
             </div> <!-- End col-sm-4 -->
 
              <div class="col-sm-4">
-              <a href="mailto:hopeforachnage@gmail.com"><i class="pe-7s-mail"></i>hopeforachnage@gmail.com</a>
+              <a href="mailto:hopeforachnage@gmail.com"><i class="pe-7s-mail"></i>hopeforachange@gmail.com</a>
              </div>
           </div> <!-- End row -->
         </div> <!-- End container -->
