--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@ I'm passionate about technology and it excites me to work around computers, codi
             </div> <!-- End col-sm-4 -->
 
              <div class="col-sm-4">
-              <a href="mailto:hopeforachnage@gmail.com"><i class="pe-7s-mail"></i>hopeforachange@gmail.com</a>
+              <a href="mailto:hopeforachnage@gmail.com"><i class="pe-7s-mail"></i>hopeforachangefoundation@gmail.com</a>
              </div>
           </div> <!-- End row -->
         </div> <!-- End container -->
