--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <div class="col-sm-8 col-sm-offset-2">
                 <h2>Our awesome team</h2>
                 <hr>
-                <p>We are a team of 4close friends who loves coding and are interested in betterment of our society by our knowledge. We love to help others in learning coding , cybersecurity and even sometimes , we take seminars to guide begginers in the world of coding and cyber.</p>
+                <p>We are a team of four close friends who love coding and are interested in development of our society through knowledge . We love helping others in learning , cybersecurity and even sometimes , we take seminars to guide begginers in the world of coding and cyber.</p>
               </div>
             </div> <!-- End row -->
           </div> <!-- end title-section -->
