--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@ I'm passionate about technology and it excites me to work around computers, codi
                 <div class="title-section">
                   <h3>Our team skills</h3>
                 </div>
-                <p>We brings together the most creative minds in science and technology to develop Frontend Webs,Graphics design , usefull tools in python and c++ that are key to modern world.</p>
+                <p>We bring together the most creative minds in science and technology to develop Frontend Webs,Graphics design , usefull tools in python and c++ that are key to modern world.</p>
               </div> <!-- end col-md-6 -->
 
               <div class="col-md-6 col-sm-6 col-xs-12">
