--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@ I'm passionate about technology and it excites me to work around computers, codi
             <div class="col-sm-8 col-sm-offset-2">
               <ul class="footer-social-links">
                 <li><a href="https://t.me/hopeforachange">Telegram</a></li>
-                <li><a href="#">Instagram</a></li>
+                <li><a href="https://www.instagram.com/hopeforachangefoundation/">Instagram</a></li>
               </ul>
               <p class="copyright">
                 &copy; 2022 Hope For A Change  <a href="#"></a>
