--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@ I'm passionate about technology and it excites me to work around computers, codi
                   Graphic Designs , Frontend Webs , Web Pentesting , Seminars on CyberSecurity , Digital Forensics , upgrading python tools , content writing related to Cybersecurity and many more .
                 </div> <!-- end banner-decription -->
                 <div>
-                  <a href="https:t.me/hopeforachange" >Lets talk</a>
+                  <a href="https://t.me/hopeforachange">Let's Talk</a>
                 </div>
               </div> <!-- end banner-content -->
             </div> <!-- end col-sm-6 -->
