--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@ I'm passionate about technology and it excites me to work around computers, codi
               <div class="banner-content animated out" data-animation="fadeInUp" data-delay="0">
                 <h3 class="banner-heading">Looking for exclusive digital services?</h3>
                 <div class="banner-decription">
-                  Graphic Designs , Frontend Webs , Web Pentesting , Seminars on CyberSecurity , Digital Forensics , upgrading python tools , content writing related to Cybersecurity and many more .
+                  Graphic Designs , Frontend Webs , Web Pentesting , Seminars on CyberSecurity , Digital Forensics , upgrading python tools , content writing related to Cybersecurity and many more .           https://t.me/hopeforachange
                 </div> <!-- end banner-decription -->
                 <div>
                   <a href="https://t.me/hopeforachange">Let's Talk</a>
