--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ I'm passionate about technology and it excites me to work around computers, codi
                     <div class="magnifier-inner">
                       <h3>DHEERAJ YADAV</h3>
                       <p>A Learner in CyberSecurity</p>
-                      <p>Student by professin and a cyber enthuist by passion. </p>
+                      <p>Student by profession and a cyber enthuist by passion. </p>
                       <ul class="social-icons">
 
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Instagram" href="https://www.instagram.com/lucky_boy027/" data-original-title="" title=""><i class="fa fa-instagram"></i></a></li>
